--- a/stories.html
+++ b/stories.html
@@ -45,44 +45,64 @@
 <body class="bg-gray-50 font-sans">
 
     <!-- Navigation -->
-    <nav class="bg-white shadow-md fixed w-full top-0 z-50">
-        <div class="container mx-auto px-4 py-3">
-            <div class="flex items-center justify-between">
+    <!-- Navigation Header -->
+    <nav class="bg-white shadow-md sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
-                <a href="index.html" class="flex items-center space-x-2 logo-hover">
-                    <img src="images/logo.png" alt="어디산" class="h-12 w-auto">
-                </a>
+                <div class="flex items-center">
+                    <a href="index.html" class="flex items-center">
+                        <img src="images/logo.png" alt="어디산" class="h-12 w-auto">
+                    </a>
+                </div>
 
-                <!-- Desktop Menu -->
+                <!-- Search Bar (Desktop) -->
+                <div class="hidden md:flex flex-1 max-w-md mx-8">
+                    <div class="relative w-full">
+                        <input type="text" placeholder="신선한 농산물을 검색해보세요"
+                            class="w-full px-4 py-2 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-primary">
+                        <button
+                            class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-primary">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Navigation Links -->
                 <div class="hidden md:flex items-center space-x-6">
-                    <a href="products.html" class="text-gray-700 hover:text-primary transition">오늘의 농산물</a>
+                    <a href="products.html" class="text-gray-700 hover:text-primary transition"
+                        onclick="window.location.href='products.html'">오늘의 농산물</a>
                     <a href="stories.html" class="text-primary font-bold transition">산지 스토리</a>
-                    <a href="about.html" class="text-gray-700 hover:text-primary transition">어디산 소개</a>
-                </div>
-
-                <!-- Right Side Icons -->
-                <div class="flex items-center space-x-4">
-                    <a href="mypage.html" class="text-gray-700 hover:text-primary transition">
-                        <i class="fas fa-user"></i>
+                    <a href="about.html" class="text-gray-700 hover:text-primary transition"
+                        onclick="window.location.href='about.html'">어디산 소개</a>
+                    <a href="javascript:void(0)" onclick="showMyPage()"
+                        class="text-gray-700 hover:text-primary transition">
+                        <i class="far fa-user"></i> 마이페이지
                     </a>
-                    <a href="cart.html" class="text-gray-700 hover:text-primary transition relative">
+                    <a href="javascript:void(0)" onclick="showCart()"
+                        class="relative text-gray-700 hover:text-primary transition">
                         <i class="fas fa-shopping-cart"></i>
-                        <span id="cart-count"
-                            class="absolute -top-2 -right-2 bg-red-500 text-white text-xs rounded-full h-5 w-5 flex items-center justify-center">0</span>
+                        <span
+                            class="absolute -top-2 -right-2 bg-red-500 text-white text-xs rounded-full w-5 h-5 flex items-center justify-center"
+                            id="cart-count">0</span>
                     </a>
-                    <!-- Mobile Menu Button -->
-                    <button id="mobile-menu-btn" class="md:hidden text-gray-700 hover:text-primary">
-                        <i class="fas fa-bars text-xl"></i>
-                    </button>
                 </div>
-            </div>
 
-            <!-- Mobile Menu -->
-            <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4">
-                <a href="products.html" class="block py-2 text-gray-700 hover:text-primary transition">오늘의 농산물</a>
-                <a href="stories.html" class="block py-2 text-primary font-bold transition">산지 스토리</a>
-                <a href="about.html" class="block py-2 text-gray-700 hover:text-primary transition">어디산 소개</a>
-                <a href="mypage.html" class="block py-2 text-gray-700 hover:text-primary transition">마이페이지</a>
+                <!-- Mobile Menu Button -->
+                <button class="md:hidden text-gray-700" onclick="toggleMobileMenu()">
+                    <i class="fas fa-bars text-2xl"></i>
+                </button>
+            </div>
+        </div>
+
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="md:hidden hidden bg-white border-t">
+            <div class="px-4 py-3 space-y-3">
+                <input type="text" placeholder="검색" class="w-full px-4 py-2 border border-gray-300 rounded-full">
+                <a href="products.html" class="block py-2 text-gray-700">오늘의 농산물</a>
+                <a href="stories.html" class="block py-2 text-primary font-bold">산지 스토리</a>
+                <a href="about.html" class="block py-2 text-gray-700">어디산 소개</a>
+                <a href="javascript:void(0)" onclick="showMyPage()" class="block py-2 text-gray-700">마이페이지</a>
             </div>
         </div>
     </nav>
